# ffgl-gpu

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  clean.sh  deploy.sh
.cargo/: config.toml
crates/ffgl-core/: Cargo.toml
crates/ffgl-core/src/: conversions.rs  entry.rs  ffi.rs  info.rs  inputs.rs  lib.rs  log.rs  plugin_main.rs
crates/ffgl-core/src/handler/: mod.rs  simplified.rs
crates/ffgl-core/src/parameters/: handler.rs  info.rs  mod.rs
crates/ffgl-glium/: Cargo.toml
crates/ffgl-glium/src/: gl_backend.rs  glsl.rs  lib.rs  texture.rs  validate_gl.rs
crates/ffgl-gpu/: Cargo.toml
crates/ffgl-gpu/src/: buffer.rs  build_support.rs  bytes.rs  context.rs  dispatch.rs  drawing.rs  lib.rs  pipeline.rs  plugin.rs  texture.rs
crates/gpu-interop/: Cargo.toml
crates/gpu-interop/src/: bridge.rs  lib.rs
crates/gpu-interop/src/dx11/: device.rs  interop.rs  mod.rs
crates/gpu-interop/src/gl_compute/: bridge.rs  mod.rs
crates/gpu-interop/src/metal/: device.rs  interop.rs  mod.rs
docs/plans/: 2026-02-25-ffgl-gpu-interop-implementation.md  2026-02-25-ffgl-gpu-interop-library-design.md
examples/blur/: Cargo.toml  build.rs
examples/blur/shaders/: blur.wgsl
examples/blur/src/: lib.rs
examples/dx11/blur/: Cargo.toml  build.rs
examples/dx11/blur/shaders/: blur.hlsl
examples/dx11/blur/src/: lib.rs
examples/dx11/invert/: Cargo.toml  build.rs
examples/dx11/invert/shaders/: invert.hlsl
examples/dx11/invert/src/: lib.rs
examples/dx11/kitchen-sink/: Cargo.toml  build.rs
examples/dx11/kitchen-sink/shaders/: effects.hlsl
examples/dx11/kitchen-sink/src/: lib.rs
examples/dx11/passthrough/: Cargo.toml  build.rs
examples/dx11/passthrough/shaders/: passthrough.hlsl
examples/dx11/passthrough/src/: lib.rs
examples/invert/: Cargo.toml  build.rs
examples/invert/shaders/: invert.metal  invert.wgsl
examples/invert/src/: lib.rs
examples/kitchen-sink/: Cargo.toml  build.rs
examples/kitchen-sink/shaders/: effects.wgsl
examples/kitchen-sink/src/: lib.rs
examples/metal/blur/: Cargo.toml
examples/metal/blur/shaders/: blur.metal
examples/metal/blur/src/: lib.rs
examples/metal/invert/: Cargo.toml  build.rs
examples/metal/invert/src/: lib.rs
examples/metal/kitchen-sink/: Cargo.toml
examples/metal/kitchen-sink/shaders/: effects.metal
examples/metal/kitchen-sink/src/: lib.rs
examples/metal/passthrough/: Cargo.toml
examples/metal/passthrough/shaders/: passthrough.metal
examples/metal/passthrough/src/: lib.rs
examples/passthrough/: Cargo.toml  build.rs
examples/passthrough/shaders/: passthrough.wgsl
examples/passthrough/src/: lib.rs
