[workspace]
members = [
    "crates/ffgl-core",
    "crates/ffgl-glium",
    "crates/gpu-interop",
    "crates/ffgl-gpu",
    "examples/passthrough",
    "examples/invert",
    "examples/blur",
    "examples/kitchen-sink",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
ffgl-core = { path = "crates/ffgl-core" }
ffgl-glium = { path = "crates/ffgl-glium" }
gpu-interop = { path = "crates/gpu-interop" }
ffgl-gpu = { path = "crates/ffgl-gpu" }

# OpenGL
gl = "0.14.0"
glium = "0.36.0"
gl_loader = "0.1.2"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
once_cell = "1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
naga = { version = "24", features = ["wgsl-in", "glsl-out", "msl-out"] }

# macOS Metal
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-metal = { version = "0.3", features = ["MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLComputeCommandEncoder", "MTLComputePipeline", "MTLLibrary", "MTLTexture", "MTLBuffer", "MTLResource", "MTLRenderPipeline", "MTLRenderCommandEncoder", "MTLRenderPass", "objc2-io-surface"] }
objc2-io-surface = { version = "0.3", features = ["IOSurfaceRef", "objc2-core-foundation"] }
objc2-open-gl = { version = "0.3", features = ["IOSurface", "CGLTypes", "CGLCurrent"] }
objc2-core-foundation = "0.3"
dispatch2 = "0.3"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
