[package]
name = "ffgl-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
gl = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
