[package]
name = "ffgl-gpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
ffgl-core = { workspace = true }
ffgl-glium = { workspace = true }
gpu-interop = { workspace = true }
gl = { workspace = true }
glium = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
dispatch2 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[build-dependencies]
naga = { workspace = true }
