[package]
name = "ffgl-invert"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ffgl-core = { workspace = true }
ffgl-glium = { workspace = true }
ffgl-gpu = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
ffgl-gpu = { workspace = true }
