[package]
name = "ffgl-blur"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ffgl-core = { workspace = true }
ffgl-glium = { workspace = true }
ffgl-gpu = { workspace = true }
gpu-interop = { workspace = true }
gl = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-metal = { workspace = true }

[build-dependencies]
ffgl-gpu = { workspace = true }
